# Improved-WLK-UI

./: .gitignore  LICENSE  NOTICE  README.md  RESTRUCTURING_NOTES.md  TODOs.md  pyproject.toml
improved_wlk_ui/: __init__.py  server.py  speaker_names.py  streamlit_app.py
improved_wlk_ui/web/: __init__.py  custom_scripts.js  custom_styles.css  live_transcription.css  live_transcription.html  live_transcription.js  web_interface.py
