[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "improved-wlk-ui"
version = "0.1.0"
description = "Enhanced UI and speaker name management for WhisperLiveKit"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.9"
authors = [
    {name = "Aeneas Christodoulou"}
]
dependencies = [
    "whisperlivekit>=0.2.15",
    "streamlit>=1.28.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "isort",
]

[project.scripts]
improved-wlk-ui = "improved_wlk_ui.streamlit_app:main"
improved-wlk-server = "improved_wlk_ui.server:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["improved_wlk_ui*"]

[tool.setuptools.package-data]
improved_wlk_ui = ["web/*.css", "web/*.js", "*.flac"]
